src/App.css
.title {
  font-family: Markazi Text;
  font-size: 64px;
  font-style: normal;
  font-weight: 500;
  margin: 0 0;
}

.city {
  font-family: Markazi Text;
  font-size: 40px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  margin: 0;
}

.description_text {
  font-family: Karla;
  font-size: 1.125rem;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.card-title {
  color: #000;
  font-family: Karla;
  font-size: 18px;
  font-style: normal;
  font-weight: 700;
  margin: 0;
}

img {
  max-width: 80vw;
}

nav {
  width: 100%;
  text-align: center;
  margin: 3.33vw 0;
  display: grid;
  grid-template-columns: auto 1fr;
  align-items: center;
  padding: 0 calc(var(--grid-width-with-gutter) / 2);
  ;
}

#navbar-links-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: end;
  position: relative;
}

nav img {
  height: 11vw;
}

nav>img {
  aspect-ratio: 37 /10;
}

#navbar-links-container>img {
  aspect-ratio: 1/1;
}

#navbar-links {
  background-color: #FFF;
  box-shadow: 2px 3px 5px #000;
  display: flex;
  list-style: none;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  margin: 0;
  padding: 0;
  width: 125%;
  position: absolute;
  top: 110%;
}



#navbar-links a {
  text-decoration: none;
  color: #000;
  font-family: Karla;
  font-size: 5vw;
  font-style: normal;
  font-weight: 800;
  line-height: normal;
  text-transform: capitalize;
  display: inline;
  width: 100%;
  box-shadow: 0 1px 0 #c2c1c1;
  text-align: right;
}

#navbar-links li {
  width: auto;
  display: inline;
  margin: 1vw;
}

@media screen and (min-width: 600px) {
  nav img {
    height: 56px;
  }
}

@media only screen and (min-width: 1200px) {
  nav {
    padding: 0 var(--grid-width-with-gutter);
    margin: 37px 0;
  }

  #navbar-links-container {
    position: static;
    width: 50vw;
    max-width: 700px;
    justify-self: end;
  }

  #navbar-links-container>img {
    display: none;
  }

  #navbar-links {
    width: 100%;
    position: static;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    box-shadow: none;
    background-color: white;
  }

  #navbar-links a {
    box-shadow: none;
    text-align: center;
    display: block;
    width: auto;
    font-size: 18px;
  }
}

#hero {
  display: grid;
  background-color: #495E57;
  align-items: start;
  grid-template-columns: 1fr 1fr;
  padding: 12vh calc(var(--grid-width-with-gutter));
  position: relative;
}

#hero article {
  align-self: center;
}

#hero header {
  color: #F4CE14;
  line-height: 3rem;
}

#hero .city {
  color: #FFF;
}

#hero .description_text {
  color: #FFF;
  width: 55%;
}

#hero img {
  justify-self: center;
  border-radius: 16px;
  border: 1px solid #000;

  margin: auto;
  aspect-ratio: 1/1;
  position: absolute;
  left: 50%;
  top: 10%;
}

button {
  display: flex;
  width: 12.5rem;
  height: 3.25rem;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
  background: #F4CE14;
  border-radius: 16px;
  color: #000;
  text-align: center;
  font-family: Karla;
  font-size: 1.125rem;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  border: none;
}

@media screen and (min-width: 700px) {
  #hero img {
    width: 42vw;
    max-width: 436px;
  }
}

@media screen and (max-width: 1200px) {
  #hero {
    grid-template-columns: 1fr;
    grid-template-rows: auto auto;
    padding: 3vw calc(var(--grid-width-with-gutter) / 2);
    grid-row-gap: 3vw;
    position: static;
  }

  #hero img {
    aspect-ratio: 1/1;
    justify-self: center;
    align-self: center;
    position: static;
    top: auto;
    left: auto;
  }

  #hero article {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    text-align: center;
  }

  #hero .description_text {
    width: 100%;
  }
}

#highlights {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 3vw;
  padding: 3vw calc(var(--grid-width-with-gutter) / 2);
  ;
}

#highlights .title {
  line-height: 3rem;
  text-align: center;
}

#food-cards-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 3vw;

}

.food-card {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 3vw;
  background-color: rgba(251, 218, 187, 0.70);
  border-radius: 16px;

}

.food-card>img {
  width: 100%;
  aspect-ratio: 3/2;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
}

.card-content {
  display: flex;
  flex-direction: column;
  align-items: start;
  padding: 0 5vw 3vw 5vw;
}

.card-head {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.card-head .card-title {
  line-height: 16px;
}

.card-head span {
  color: #EE9972;
  font-family: Karla;
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 16px;
}


.food-card b img {
  width: 1rem;
  aspect-ratio: 1/1;
  vertical-align: middle;
}

@media screen and (min-width: 1200px) {
  #highlights {
    padding: 10vw var(--grid-width-with-gutter) 3vw;
    display: grid;
    grid-template-columns: 1fr auto;
    grid-template-rows: auto auto;
    grid-template-areas: "title button"
      "card card";

  }

  #hightlights .header {
    grid-area: title;
  }

  #highlights .title {
    text-align: left;
  }

  #hightlights button {
    grid-area: button;
  }

  #food-cards-container {
    grid-area: card;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 3vw;
  }

  .card-content {
    padding: 0 2vw 3vw 2vw;
    height: 100%;
  }

  .card-content b {
    margin-top: auto;
  }
}

#testimonials {
  background-color: #495E57;
  padding: 5vw calc(var(--grid-width-with-gutter) / 2);
  display: flex;
  flex-direction: column;
  gap: 3vw;
  align-items: center;
}

#testimonials .title {
  text-align: center;
  font-size: 15vw;
  color: #F4CE14;
}

@media screen and (min-width: 460px) {
  #testimonials .title {
    font-size: 64px
  }
}

#testimonials-cards-container {
  display: grid;
  grid-template-rows: repeat(4, auto);
  grid-template-columns: auto;
  gap: 3vw;
}

.testimonial-card {
  background-color: #FBDABB;
  border-radius: 16px;
  padding: 3vw 3vw;
  display: flex;
  gap: 3vw;
  flex-direction: column;
}

.testimonial-card-head {
  width: 100%;
  display: flex;
  gap: 3vw;
  justify-content: start;
  align-items: center;
}

.testimonial-avatar {
  display: flex;
  gap: 3vw;
  align-items: center;
}

.testimonial-avatar img {
  width: 20vw;
  aspect-ratio: 1/1;
  border-radius: 16px;
}

.testimonial-card p {
  margin: 0;
}

@media screen and (min-width: 600px) {
  #testimonials-cards-container {
    grid-template-columns: repeat(2, auto);
    grid-template-rows: repeat(2, auto);
  }

  .testimonial-avatar img {
    width: 12vw;
  }

  .testimonial-card {
    gap: 2vw;
  }

  .testimonial-card-head {
    gap: 1rem;
  }

  .testimonial-avatar {
    gap: 1rem;
  }

}

@media screen and (min-width: 1200px) {
  #testimonials {
    padding: 5vw var(--grid-width-with-gutter);
  }

  #testimonials-cards-container {
    grid-template-columns: repeat(4, auto);
    grid-template-rows: repeat(1, auto);
    gap: 1vw;
  }

  .testimonial-avatar img {
    width: 5vw;
  }

  .testimonial-card {
    gap: 1vw;
  }
}

#about {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  text-align: center;
  padding: 3vw calc(var(--grid-width-with-gutter) / 2);
}

#about header {
  margin-bottom: 0;
}

#about .title {
  color: #F4CE14;
  line-height: 3rem;
}

#about .city {
  margin-top: 0;
}

#about-pictures img {
  width: 100%;
}

#about p:last-of-type {
  font-family: Karla;
  font-size: 18px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

@media screen and (min-width: 700px) {

  #about-pictures {
    position: relative;
    width: 100%;
    height: 73vw;
  }

  #mask-restaurant-chef-A {
    height: 50vw;
    aspect-ratio: 8/10;
    position: absolute;
    overflow: hidden;
    right: 5%;
    z-index: 1;
  }

  #mask-restaurant-chef-B {
    height: 50vw;
    aspect-ratio: 8/10;
    position: absolute;
    overflow: hidden;
    left: 5%;
    top: 30%;
  }

  #about-pictures img {
    height: 100%;
    width: auto;
  }

  #mask-restaurant-chef-A img {
    position: absolute;
    right: -25%;
  }

  #mask-restaurant-chef-B img {
    position: absolute;
    right: -50%;
  }
}

@media screen and (min-width: 1200px) {
  #about {
    padding: 3vw calc(var(--grid-width-with-gutter) * 2);
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    text-align: start;
    grid-template-areas: "title pictures"
      "city pictures"
      "content pictures";
  }

  #about header {
    grid-area: title;
  }

  #about .city {
    grid-area: city;
  }

  #about p:last-of-type {
    grid-area: content;
  }

  #section-pictures {
    grid-area: pictures;
    grid-row: 1/3;
    grid-column: 2/4;
  }

  #about-pictures {
    height: 25vw;
  }

  #mask-restaurant-chef-A {
    height: 75%;
    top: 0%;
    right: 0;
  }

  #mask-restaurant-chef-B {
    height: 75%;
    top: 15%;
  }
}

#footer {
  padding: 3vw calc(var(--grid-width-with-gutter) / 2);
  background-color: #495E57;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  gap: 3vw;
}

#footer-link-container {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  gap: 3vw;
}

#footer img {
  width: 100%;
}

.about-link-title {
  margin: 0;
  color: #F4CE14;
  font-family: Karla;
  font-size: 20px;
  font-style: normal;
  font-weight: 800;
  line-height: normal;
}

.footer-links {
  width: 60vw;
}

.footer-links ul {
  margin: 0;
  list-style: none;
  padding-left: 5vw;
}

.footer-links a {
  color: #FFF;
  text-decoration: none;
  font-family: Karla;
  font-size: 18px;
  font-style: normal;
  font-weight: 500;
}

@media screen and (min-width: 600px) {
  #footer {
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: repeat(2, auto);
  }

  #footer-link-container {
    flex-direction: row;
    align-items: start;
  }

  .footer-links {
    width: 100%;
  }

  .footer-links ul {
    padding-left: 0;
  }
}

@media screen and (min-width: 1000px) {
  #footer {
    padding: 3vw calc(var(--grid-width-with-gutter) / 2);
    display: grid;
    grid-template-columns: 17vw 1fr;
    grid-template-rows: auto
  }

  #footer img {
    width: 100%;
    aspect-ratio: 7/8;
  }
}

@media screen and (min-width: 1200px) {
  #footer {
    padding: 3vw var(--grid-width-with-gutter);
  }
}

